Fix BXEGS-895 "In Overview, word in address breaks in middle of word"

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -866,8 +866,7 @@ button.closebtn {
     margin-top: 15px;
 }
 
-.overview-line.email,
-.overview-line.addr {
+.overview-line.email {
     word-break: break-all;
 }
 
